data/derived/fa15/progs/unify/prog2045.ml.out
Characters 144-180:
  (if num1 + num2 + carry >= 10 then 1 else 0, (num1 + num2 + carry) mod 10::sum) in
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
